Корректировки по swagger.yml. Были добавлены api для работы с навыками. Подкорректирован database.md
